# voight

./: .gitignore  LICENSE  README.md  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release-package.yml  test-lint.yml
docs/: grammar-pipeline-plan.md
native/parser/: CMakeLists.txt  README.md  error.cpp  error.h  json.cpp  json.h  package.json  parser_cli.cpp  parser_json.cpp  parser_json.h  parser_wasm.cpp
native/parser/grammar/: README.md  VoightLexer.g4  VoightParser.g4
scripts/: build-parser-wasm.sh  generate-native-parser.sh  prepare-cmake-build.sh  prepare-package.mjs
src/: analyzer.ts  ast.ts  binder.ts  catalog.ts  compiler.ts  diagnostics.ts  emitter.ts  enforcer.ts  lexer.ts  lukas.ts  parser.ts  policies.ts  result.ts  rewriter.ts  testing.ts  validator.ts
tests/: adversarial-e2e.test.ts  adversarial-emitter.test.ts  adversarial-infoleak.test.ts  adversarial-parser.test.ts  adversarial-proof.test.ts  adversarial.test.ts  binder.test.ts  compiler.test.ts  lexer.test.ts  parser.test.ts  policies.test.ts  validator-emitter.test.ts
tools/: antlr-toolchain.env
